--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ a:hover, a:focus{
   grid-column-start: 1;
   grid-column-end: -1;
 
-  background-image: url("/images/header.jpg");
+  background-image: url("../images/header.jpg");
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
